<resources>
    <string name="app_name">Calm Sleep</string>
    <string name="home">Home</string>
    <string name="sounds">Sounds</string>
    <string name="strories">Strories</string>
    <string name="meditation">Meditation</string>
    <string name="alarm">Alarm</string>
    <string name="la_vay">la vay</string>
    <string name="sound">Sound</string>
    <string name="experts_picks">Experts Picks</string>
    <string name="recently_listened">Recently Listened</string>
    <string name="females_narration">Females narration</string>
    <string name="male_narration">Male narration</string>
    <string name="kids">Kids</string>
    <string name="sleep_story">Sleep Story</string>
    <string name="sleep_meditation">Sleep Meditation</string>
    <string name="sleep_sound">Sleep Sound</string>
    <string name="nature">Nature</string>
    <string name="ambient">Ambient</string>
    <string name="content_skip_prev">Skip to previous track</string>
    <string name="open_details_fragment">Open artist/folder\'s details</string>
    <string name="content_playback_speed">Playback speed</string>
    <string name="loved_songs_save_time">Save song position</string>
    <string name="loved_song_add">Add to favorite songs</string>
    <string name="precise_volume_pref_title">Precise volume control</string>
    <string name="content_play">content_play</string>
    <string name="queue">queue</string>
    <string name="loved_songs">loved_songs</string>
    <string name="content_skip_next">content_skip_next</string>
    <string name="content_repeat">content_repeat</string>
    <string name="the_app_is_free_n_support_us">The App Is Free \n😍Support Us</string>
    <string name="lunch">Lunch</string>
    <string name="sandwich">Sandwich</string>
    <string name="coffee">Coffee</string>
    <string name="manage_subscription">Manage Subscription</string>
    <string name="you_not_have_any_sleep_sound_downloaded_as_yet">You not have any sleep sound downloaded as yet</string>
    <string name="favourites_is_empty">Favourites is Empty</string>
    <string name="auto_download_favourites">Auto Download Favourites</string>
    <string name="pay_developers_a_tip">Pay developers a tip</string>
    <string name="app_language">App Language</string>
    <string name="rate_us_on_playstore">Rate us on Playstore</string>
    <string name="bedtime_reminder_popup">Bedtime Reminder Popup</string>
    <string name="save_bedtime">SAVE BEDTIME</string>
    <string name="repeat">Repeat</string>
    <string name="do_you_really_want_to_exit">Do you really want to exit ???</string>
    <string name="no">NO</string>
    <string name="yes">YES</string>
    <string name="notification_and_popups">Notification and popups</string>
    <string name="c_ch_c_ch_n_kh_ng">Có Chắc Chắn Không</string>
    <string name="favourites">Favourites</string>
    <string name="say_thanks">🤗 Say Thanks</string>
    <string name="y_u_ai_c">Yêu ai cơ</string>
    <string name="bed_time">Bed Time</string>
    <string name="my_favourites">My Favourites</string>
    <string name="downloads">Downloads</string>
    <string name="bed_time_reminder">Bed Time Reminder</string>
    <string name="view_all">View All</string>
    <string name="save_alarm">SAVE ALARM</string>
    <string name="setting">Settings</string>
    <string name="contact_us">Contact us</string>


</resources>