<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_home"
        android:icon="@drawable/home_ic"
        android:textSize="@dimen/_2sdp"
        android:enabled="true"
        android:title="@string/home" />
    <item
        android:id="@+id/action_sounds"
        android:icon="@drawable/sound_ic"
        android:textSize="@dimen/_2sdp"
        android:enabled="true"
        android:title="@string/sounds" />
    <item
        android:id="@+id/action_stories"
        android:icon="@drawable/stories_ic"
        android:enabled="true"
        android:textSize="@dimen/_2sdp"
        android:title="@string/strories" />
    <item
        android:id="@+id/action_meditation"
        android:icon="@drawable/meditation_ic"
        android:textSize="@dimen/_2sdp"
        android:enabled="true"
        android:title="@string/meditation" />
    <item
        android:id="@+id/action_alarm"
        android:icon="@drawable/alarm_ic"
        android:textSize="@dimen/_2sdp"
        android:enabled="true"
        android:title="@string/alarm" />

</menu>