<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="@dimen/_15sdp"
        app:cardCornerRadius="@dimen/_14sdp"
        >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bg_layout"
        android:minWidth="@dimen/_230sdp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:layoutDirection="rtl"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_close"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/_15sdp"
                android:src="@drawable/de" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="@dimen/_12sdp"
                android:fontFamily="@font/montserrat_light"
                android:gravity="center_vertical"
                android:text="@string/the_app_is_free_n_support_us"
                android:textColor="@color/black"
                android:textSize="@dimen/_13sdp"
                android:textStyle="bold" />


        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_lunch"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_42sdp"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:layout_marginEnd="@dimen/_12sdp"
            app:cardCornerRadius="@dimen/_5sdp"
            app:cardElevation="@dimen/_20sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/color_black"
                android:layoutDirection="rtl"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:text="71.000vnd"
                    android:textColor="@color/white" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_42sdp"
                    android:layoutDirection="ltr"
                    android:orientation="horizontal">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/_36sdp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="@dimen/_12sdp"
                        android:fontFamily="@font/gilroy_regular"
                        android:gravity="center_vertical"
                        android:text="@string/lunch"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_12sdp"
                        android:textStyle="bold" />

                </LinearLayout>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_sand"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_42sdp"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:layout_marginEnd="@dimen/_12sdp"
            app:cardCornerRadius="@dimen/_5sdp"
            app:cardElevation="@dimen/_20sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/color_black"
                android:layoutDirection="rtl"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="47.000vnd"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:textColor="@color/white" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_42sdp"
                    android:layoutDirection="ltr"
                    android:orientation="horizontal">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/_36sdp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="@dimen/_12sdp"
                        android:fontFamily="@font/gilroy_regular"
                        android:gravity="center_vertical"
                        android:text="@string/sandwich"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_12sdp"
                        android:textStyle="bold" />

                </LinearLayout>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_coffee"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_42sdp"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:layout_marginEnd="@dimen/_12sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            app:cardCornerRadius="@dimen/_5sdp"
            app:cardElevation="@dimen/_20sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/color_black"
                android:layoutDirection="rtl"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="24.000vnd"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:textColor="@color/white" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_42sdp"
                    android:layoutDirection="ltr"
                    android:orientation="horizontal">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/_36sdp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="@dimen/_12sdp"
                        android:fontFamily="@font/gilroy_regular"
                        android:gravity="center_vertical"
                        android:text="@string/coffee"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_12sdp"
                        android:textStyle="bold" />

                </LinearLayout>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/manage_subscription"
            android:layout_marginBottom="@dimen/_20sdp"
            android:textColor="@color/color_black"
            android:textStyle="bold"
            android:gravity="center"

            />
    </LinearLayout>
    </androidx.cardview.widget.CardView>
</layout>