<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/home_bg"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <RelativeLayout
            android:id="@+id/button_sup"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_25sdp"
            android:layout_marginTop="@dimen/_18sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:background="@drawable/bg_thanks"
            android:gravity="center_vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" >
            <TextView
                android:textAllCaps="false"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:text="@string/say_thanks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </RelativeLayout>




        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/bg_layout"
            app:itemIconSize="@dimen/_12sdp"
            app:itemIconTint="@color/color_bottom"
            app:itemTextColor="@color/color_bottom"
            app:labelVisibilityMode="labeled"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:menu="@menu/menu_bottom" />

        <FrameLayout
            android:id="@+id/rc"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_above="@+id/rl_gone"
            android:layout_marginTop="@dimen/_10sdp"
            app:layout_constraintBottom_toTopOf="@+id/rl_gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_sup" />

        <androidx.cardview.widget.CardView
            android:id="@+id/rl_gone"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_37sdp"
            app:layout_constraintBottom_toTopOf="@+id/bar"
            app:cardBackgroundColor="@android:color/transparent"
            app:cardElevation="@dimen/_50sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">
            <androidx.constraintlayout.widget.ConstraintLayout

                android:layout_width="match_parent"
                android:layout_height="@dimen/_37sdp"
                android:background="@color/bg_layout"
                android:elevation="@dimen/_7sdp"
                android:orientation="vertical"
                android:visibility="visible"
                tools:ignore="UnusedAttribute">


                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/animation_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true"
                    android:scaleType="centerCrop"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:lottie_loop="true"
                    app:lottie_rawRes="@raw/violet_wave" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#00000000"
                    android:baselineAligned="false"
                    android:orientation="horizontal"
                    android:padding="@dimen/_2sdp"
                    app:layout_constraintBottom_toBottomOf="@+id/animation_view"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent">

                    <LinearLayout
                        android:id="@+id/playing_song_container"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="50dp"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/play_pause_button"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <TextView
                            android:id="@+id/playing_song"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ellipsize="marquee"
                            android:marqueeRepeatLimit="marquee_forever"
                            android:singleLine="true"
                            android:text="@string/app_name"
                            android:textAlignment="textStart"
                            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                            android:textColor="@color/color_white"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/playing_artist"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ellipsize="marquee"
                            android:marqueeRepeatLimit="marquee_forever"
                            android:singleLine="true"
                            android:text="@string/y_u_ai_c"
                            android:textAlignment="textStart"
                            android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
                            android:textColor="@color/color_white" />
                    </LinearLayout>

                    <ImageButton
                        android:id="@+id/queue_button"
                        android:layout_width="@dimen/_23sdp"
                        android:layout_height="@dimen/_23sdp"
                        android:layout_gravity="center"
                        android:background="?android:attr/actionBarItemBackground"
                        android:contentDescription="@string/queue"
                        android:padding="8dp"
                        android:scaleType="centerInside"
                        android:src="@drawable/baseline_close_white_24dp"
                        android:visibility="visible"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/play_pause_button"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageButton
                        android:id="@+id/play_pause_button"
                        android:layout_width="@dimen/_23sdp"
                        android:layout_height="@dimen/_23sdp"
                        android:layout_gravity="center"
                        android:layout_marginEnd="50dp"
                        android:background="?android:attr/actionBarItemBackground"
                        android:contentDescription="@string/content_play"
                        android:padding="@dimen/_4sdp"
                        android:src="@drawable/baseline_play_arrow_white_48dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>