<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <androidx.constraintlayout.motion.widget.MotionLayout
        android:id="@+id/cl_main_2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layoutDescription="@xml/fragment_stories_xml_cl_main_2_scene">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="parent">
          <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">
              <androidx.constraintlayout.widget.ConstraintLayout
                  android:id="@+id/bar"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginStart="@dimen/_15sdp"
                  android:layout_marginEnd="@dimen/_15sdp"
                  android:orientation="horizontal"
                  app:layout_constraintEnd_toEndOf="parent"
                  app:layout_constraintStart_toStartOf="parent"
                  app:layout_constraintTop_toTopOf="parent">

                  <LinearLayout
                      android:id="@+id/linearLayout6"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:orientation="horizontal"
                      android:weightSum="2"
                      app:layout_constraintBottom_toTopOf="@+id/linearLayout7"
                      app:layout_constraintEnd_toEndOf="parent"
                      app:layout_constraintStart_toStartOf="parent"
                      app:layout_constraintTop_toTopOf="parent"
                      tools:ignore="DisableBaselineAlignment">

                      <LinearLayout
                          android:id="@+id/iv_picks"
                          android:layout_width="match_parent"
                          android:layout_height="@dimen/_38sdp"
                          android:layout_marginEnd="@dimen/_5sdp"
                          android:layout_weight="1"
                          android:background="@drawable/bg_radius_layout"
                          android:gravity="center_vertical"
                          android:orientation="horizontal">

                          <ImageView
                              android:layout_marginStart="@dimen/_5sdp"
                              android:layout_width="@dimen/_20sdp"
                              android:layout_height="@dimen/_20sdp"
                              android:scaleType="centerInside"
                              android:src="@drawable/expert_picks" />

                          <TextView
                              android:layout_width="wrap_content"
                              android:layout_height="wrap_content"
                              android:layout_marginStart="@dimen/_10sdp"
                              android:text="@string/experts_picks"
                              android:textColor="@color/white"
                              android:textSize="@dimen/_10sdp" />
                      </LinearLayout>

                      <LinearLayout
                          android:id="@+id/iv_ambient"
                          android:layout_width="match_parent"
                          android:layout_height="@dimen/_38sdp"
                          android:layout_marginStart="@dimen/_5sdp"
                          android:layout_weight="1"
                          android:background="@drawable/bg_radius_layout"
                          android:gravity="center_vertical"
                          android:orientation="horizontal">

                          <ImageView
                              android:layout_marginStart="@dimen/_5sdp"
                              android:layout_width="@dimen/_20sdp"
                              android:layout_height="@dimen/_20sdp"
                              android:src="@drawable/ambient" />

                          <TextView
                              android:layout_width="wrap_content"
                              android:layout_height="wrap_content"
                              android:layout_marginStart="@dimen/_10sdp"
                              android:text="@string/ambient"
                              android:textColor="@color/white"
                              android:textSize="@dimen/_10sdp" />
                      </LinearLayout>
                  </LinearLayout>

                  <LinearLayout
                      android:id="@+id/linearLayout7"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:orientation="horizontal"
                      android:weightSum="2"
                      app:layout_constraintBottom_toBottomOf="parent"
                      app:layout_constraintEnd_toEndOf="parent"
                      app:layout_constraintStart_toStartOf="parent"
                      app:layout_constraintTop_toBottomOf="@+id/linearLayout6"
                      tools:ignore="DisableBaselineAlignment">

                      <LinearLayout
                          android:id="@+id/iv_nature"
                          android:layout_width="match_parent"
                          android:layout_height="@dimen/_38sdp"
                          android:layout_marginTop="@dimen/_5sdp"
                          android:layout_marginEnd="@dimen/_5sdp"
                          android:layout_weight="1"
                          android:background="@drawable/bg_radius_layout"
                          android:gravity="center_vertical"
                          android:orientation="horizontal">

                          <ImageView
                              android:layout_marginStart="@dimen/_5sdp"
                              android:layout_width="@dimen/_20sdp"
                              android:layout_height="@dimen/_20sdp"
                              android:src="@drawable/natural" />

                          <TextView
                              android:layout_width="wrap_content"
                              android:layout_height="wrap_content"
                              android:layout_marginStart="@dimen/_10sdp"
                              android:text="@string/nature"
                              android:textColor="@color/white"
                              android:textSize="@dimen/_10sdp" />
                      </LinearLayout>

                      <LinearLayout
                          android:id="@+id/iv_kid"
                          android:layout_width="match_parent"
                          android:layout_height="@dimen/_38sdp"
                          android:layout_marginStart="@dimen/_5sdp"
                          android:layout_marginTop="@dimen/_5sdp"
                          android:layout_weight="1"
                          android:background="@drawable/bg_radius_layout"
                          android:gravity="center_vertical"
                          android:orientation="horizontal">

                          <ImageView
                              android:layout_width="@dimen/_20sdp"
                              android:layout_height="@dimen/_20sdp"
                              android:layout_marginStart="@dimen/_5sdp"
                              android:src="@drawable/kid" />

                          <TextView
                              android:layout_width="wrap_content"
                              android:layout_height="wrap_content"
                              android:layout_marginStart="@dimen/_10sdp"
                              android:text="@string/kids"
                              android:textColor="@color/white"
                              android:textSize="@dimen/_10sdp" />
                      </LinearLayout>
                  </LinearLayout>

              </androidx.constraintlayout.widget.ConstraintLayout>

              <com.google.android.material.tabs.TabLayout
                  android:id="@+id/tab_layout"
                  android:layout_width="match_parent"
                  android:layout_height="@dimen/_25sdp"
                  android:layout_gravity="center"
                  android:layout_marginStart="@dimen/_15sdp"
                  android:layout_marginTop="@dimen/_36sdp"
                  android:layout_marginEnd="@dimen/_15sdp"
                  android:layout_marginBottom="@dimen/_5sdp"
                  android:background="@drawable/bg_tab_selected"
                  app:layout_constraintBottom_toTopOf="@+id/vp"
                  app:layout_constraintEnd_toEndOf="parent"
                  app:layout_constraintStart_toStartOf="parent"
                  app:layout_constraintTop_toBottomOf="@+id/bar"
                  app:tabBackground="@drawable/bg_tab_layout"
                  app:tabIndicatorHeight="0dp"
                  app:tabSelectedTextColor="@color/white"
                  app:tabTextAppearance="@android:style/TextAppearance.Widget.TabWidget"
                  app:tabTextColor="#bdbdbd" />

              <androidx.viewpager.widget.ViewPager
                  android:id="@+id/vp"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  app:layout_constraintBottom_toBottomOf="parent"
                  app:layout_constraintEnd_toEndOf="parent"
                  app:layout_constraintHorizontal_bias="0.0"
                  app:layout_constraintStart_toStartOf="parent"
                  app:layout_constraintTop_toBottomOf="@+id/tab_layout">

              </androidx.viewpager.widget.ViewPager>
          </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.motion.widget.MotionLayout>


</layout>